--- a/MyWebsite/Views/Account/Register.cshtml
+++ b/MyWebsite/Views/Account/Register.cshtml
@@ -13,20 +13,20 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label class="textGrey" asp-for="Email"></label>
-                    <input asp-for="Email" class="form-control textGrey" />
-                    <span asp-validation-for="Email" class="textGrey"></span>
+                    <input asp-for="Email" class="form-control" style="color:#cfd8dc;" />
+                    <span asp-validation-for="Email"></span>
                 </div>
                 <div class="form-group">
                     <label class="textGrey" asp-for="Password"></label>
-                    <input asp-for="Password" class="form-control textGrey" />
-                    <span asp-validation-for="Password" class="textGrey"></span>
+                    <input asp-for="Password" class="form-control" style="color:#cfd8dc;" />
+                    <span asp-validation-for="Password"></span>
                 </div>
                 <div class="form-group">
                     <label class="textGrey" asp-for="ConfirmPassword"></label>
-                    <input asp-for="ConfirmPassword" class="form-control textGrey" />
-                    <span asp-validation-for="ConfirmPassword" class="textGrey"></span>
+                    <input asp-for="ConfirmPassword" class="form-control" style="color:#cfd8dc;" />
+                    <span asp-validation-for="ConfirmPassword" ></span>
                 </div>
-                <button style="margin-top:10px;" type="submit" class=" waves-effect waves-light btn red accent-4 redButton">Register</button>
+                <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light btn sharpCorners black-text">Register</button>
             </form>
         </div>
     </div>
@@ -37,8 +37,6 @@
         border-radius: 0px !important;
     }
 </style>
-
-
 
 
 
