--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -8,8 +8,8 @@
 
 
 <div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
-<h3 style="text-align:center; font-weight:bold; color:#cfd8dc; margin-top:100px;">The Painless Budget</h3>
-<div style="border-bottom: 1px dotted #cfd8dc;"></div>
+<h3 style="text-align:center; font-weight:bold; color:#81cac4; margin-top:100px;">The Painless Budget</h3>
+<div style="border-bottom: 1px solid #cfd8dc;"></div>
 
 
 <div class="container">
@@ -22,7 +22,7 @@
     <div class="container" style="margin-top:20px;">
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.typeError</p>
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.costError</p>
-        <p style="text-align:center; font-weight:bold; color:#76ff03; margin-top:10px;">@TempData["successTransactionAdded"]</p>
+        <p style="text-align:center; font-weight:bold; color:#81cac4; margin-top:10px;">@TempData["successTransactionAdded"]</p>
     </div>
     <div class="row">
         <div class="col s12 m12 l4"></div>
@@ -40,7 +40,7 @@
             </div>
             <h5>Description</h5>
             <div class="input-field">
-                <input name="Description" placeholder="      ..." id="purchase-item" style="margin-top: 25px;" type="text" class="validate">
+                <input name="Description" placeholder=" Enter item description..." id="purchase-item" style="margin-top: 25px;" type="text" class="validate">
             </div>
             <h5 style="margin-top:25px;">Price</h5>
             <div class="input-field">
@@ -61,7 +61,7 @@
 
 @*View Transactions*@
 <div class="container center" style="margin-top:35px; margin-bottom:250px;">
-    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">View Past Transaction</h5>
+    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Past Transactions</h5>
     <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_dining</i>Grocery</a>
         <table class="table" id="transactionsG" align="center" style="display:none; width:25%; margin-bottom:25px;">
             <tr style="border-bottom: 1px dotted #cfd8dc">
@@ -77,7 +77,7 @@
                 <tr style="border-bottom: 1px dotted #cfd8dc">
                     <td>@item.Date.ToString("MM/dd/yyyy")</td>
                     <td>@item.Description</td>
-                    <td>@item.Cost</td>
+                    <td>$@item.Cost</td>
                     <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
                 </tr>            
             }
@@ -104,7 +104,7 @@
             <tr style="border-bottom: 1px dotted #cfd8dc">
                 <td>@item.Date.ToString("MM/dd/yyyy")</td>
                 <td>@item.Description</td>
-                <td>@item.Cost</td>
+                <td>$@item.Cost</td>
                 <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
             </tr>
         }
@@ -131,7 +131,7 @@
             <tr style="border-bottom: 1px dotted #cfd8dc">
                 <td>@item.Date.ToString("MM/dd/yyyy")</td>
                 <td>@item.Description</td>
-                <td>@item.Cost</td>
+                <td>$@item.Cost</td>
                 <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
             </tr>
         }
@@ -158,7 +158,7 @@
             <tr style="border-bottom: 1px dotted #cfd8dc">
                 <td>@item.Date.ToString("MM/dd/yyyy")</td>
                 <td>@item.Description</td>
-                <td>@item.Cost</td>
+                <td>$@item.Cost</td>
                 <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
             </tr>
         }
@@ -185,7 +185,7 @@
             <tr style="border-bottom: 1px dotted #cfd8dc">
                 <td>@item.Date.ToString("MM/dd/yyyy")</td>
                 <td>@item.Description</td>
-                <td>@item.Cost</td>
+                <td>$@item.Cost</td>
                 <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
             </tr>
         }
@@ -212,7 +212,7 @@
             <tr style="border-bottom: 1px dotted #cfd8dc">
                 <td>@item.Date.ToString("MM/dd/yyyy")</td>
                 <td>@item.Description</td>
-                <td>@item.Cost</td>
+                <td>$@item.Cost</td>
                 <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
             </tr>
         }
@@ -261,10 +261,9 @@
        padding-bottom: 10px;
     }
 
-    .select-wrapper input.select-dropdown:hover{
-        
-            background-color: black !important;
-            color: #76ff03 !important;
+    .select-wrapper input.select-dropdown:hover {
+        background-color: black !important;
+        color: #81cac4 !important;
     }
 
     .trashcan-icon{
@@ -273,7 +272,7 @@
     }
 
     .trashcan-icon:hover {
-        color: #76ff03 !important;
+        color: #81cac4 !important;
     }
 
 </style>
@@ -323,60 +322,60 @@
 
    $('#transaction-btnG').click(function () {
         if (clickedG) {
-            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            $(this).css("cssText", "color: #81cac4 !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedG = false;
         } else {
-            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedG = true;
         }
     });
    
     $('#transaction-btnH').click(function () {
             if (clickedH) {
-                $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+                $(this).css("cssText", "color: #81cac4 !important; font-weight:bold; font-size:20px; margin-top:10px;");
                 clickedH = false;
             } else {
-                $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+                $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold; font-size:20px; margin-top:10px;");
                 clickedH = true;
             }
         });
 
     $('#transaction-btnB').click(function () {
         if (clickedB) {
-            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            $(this).css("cssText", "color: #81cac4 !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedB = false;
         } else {
-            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedB = true;
         }
     });
 
     $('#transaction-btnE').click(function () {
         if (clickedE) {
-            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            $(this).css("cssText", "color: #81cac4 !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedE = false;
         } else {
-            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedE = true;
         }
     });
 
     $('#transaction-btnGas').click(function () {
         if (clickedGas) {
-            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            $(this).css("cssText", "color: #81cac4 !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedGas = false;
         } else {
-            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedGas = true;
         }
     });
 
     $('#transaction-btnM').click(function () {
         if (clickedM) {
-            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            $(this).css("cssText", "color: #81cac4 !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedM = false;
         } else {
-            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold; font-size:20px; margin-top:10px;");
             clickedM = true;
         }
     });
