--- a/MyWebsite/Views/Budgets/Edit.cshtml
+++ b/MyWebsite/Views/Budgets/Edit.cshtml
@@ -19,7 +19,7 @@
 <h3 style="text-align:center; color:#cfd8dc; font-weight: bold; margin-top:100px;">The Painless Budget</h3>
 <div style="border-bottom: 1px dotted #cfd8dc;"></div>
 
-<div class="container">
+<div class="container" style="margin-bottom:100px;">
     <form asp-action="Edit">
         <div class="row">
             <div class="col l12 m12 s12" align="center" style="margin-top:55px;">
