--- a/MyWebsite/Views/Account/Register.cshtml
+++ b/MyWebsite/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col s6">
             <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-                <h4 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">Create a new account</h4>
+                <h4 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">Create a New Account</h4>
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label class="textGrey" asp-for="Email"></label>
@@ -32,13 +32,14 @@
     </div>
 </div>
 
+<div style="height:300px;"></div>
+
+
 <style>
     .sharpCorners {
         border-radius: 0px !important;
     }
 </style>
-
-
 
 
 @section Scripts {
