--- a/MyWebsite/Views/Budgets/Index.cshtml
+++ b/MyWebsite/Views/Budgets/Index.cshtml
@@ -216,7 +216,7 @@ else
 
         @foreach (var item in Model.Where(x => x.Month == budgetMonth))
         {
-            <div class="container">
+            <div class="container" style="margin-bottom:100px;">
                 <div class="row">
                     <div class="col s12 m12 l6">
                         @{double remainingG = item.GroceryLimit - Convert.ToInt32(TempData["groceryTotal"]);}
@@ -366,7 +366,6 @@ else
 }
 
 
-
 <style>
     #Total Spent {
         color: #cfd8dc !important;
@@ -375,8 +374,12 @@ else
     #Total Remaining Budget {
         color: #cfd8dc !important;
     }
-</style>
 
+    footer {
+        width: 100%;
+        bottom: 0px;
+    }
+</style>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
@@ -577,6 +580,6 @@ else
             chart.draw(data, options);
         }
     }
-                                      
+
 </script>
 
