changes to home page

--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -18,8 +18,42 @@
     <div class="parallax"><img src="~/images/nebula.png" /></div>
 </div>
 
-<div style="height:500px;"></div>
+<h3 style="text-align:center; margin-top:40px; font-weight:200; font-size:30px; letter-spacing:1.5px;">TECHNOLOGIES USED</h3>
+<div class="containter center-div"  style="margin-top:40px; margin-bottom:150px; text-align:center; width:55%; padding:10px; border: 4px dotted #81cac4;">
+    <ul id="tech-used">
+        <li>C#</li>
+        <li>ASP.NET MVC</li>
+        <li>Razor Syntax</li>
+        <li>LINQ</li>
+        <li>Entity Framework</li>
+        <li>MS Visual Studio</li>
+        <li>Microsoft SQL Server</li>
+        <li>SSMS</li>
+        <li>Bootstrap</li>
+        <li>Materialize</li>
+        <li>Kendo UI</li>
+        <li>JavaScript</li>
+        <li>jQuery</li>
+        <li>JSON</li>
+        <li>AJAX</li>
+        <li>HTML/CSS</li>
+        <li>Git</li>
+        <li>Bash</li>
+        <li>WordPress</li>
+        <li>OOP Concepts</li>
+    </ul>
+</div>
 
+<style>
+    #tech-used {
+        -webkit-column-count: 4;
+        -moz-column-count: 4;
+        column-count: 4;
+        color: #cfd8dc;
+        font-size: 18px;
+    }
+
+</style>
 
 <script src="~/js/particles.js"></script>
 
