--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -10,7 +10,7 @@
                 <div class="card-image">
                     <img src="~/images/darkStars.jpg" />
                     <span class="card-title" style="font-size:30px;">GitHub</span>
-                    <a class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="fab fa-github" style="color:black"></i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4" a href="https://github.com/JordynRachelThompson/Website" target="_blank"><i class="fab fa-github" style="color:black"></i></a>
                 </div>
                 <div class="card-content black-text">
                     <p>View the code for this site and the projects within it here...</p>
